more settings and instruction in readme

--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,6 @@
 MAIL_SERVER="smtp.gmail.com"
-# MAIL_SERVER="localhost"
-# MAIL_USERNAME=os.environ["EMAIL_USER"]
-# MAIL_PASSWORD=os.environ["EMAIL_PASSWORD"]
+MAIL_USERNAME='testemail@gmail.com',
+MAIL_PASSWORD="testpassword"
 MAIL_PORT=465
 MAIL_USE_SSL=True
 MAIL_USE_TLS=False
